--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -60,7 +60,9 @@ BR2_PACKAGE_PIGPIO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_UNIXODBC=y
-BR2_PACKAGE_CAIRO=y
+BR2_PACKAGE_CAIRO_PDF=y
+BR2_PACKAGE_CAIRO_PNG=y
+BR2_PACKAGE_CAIROMM=y
 BR2_PACKAGE_DTC=y
 BR2_PACKAGE_LIBMNL=y
 BR2_PACKAGE_WIRELESS_REGDB=y
