--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -47,6 +47,7 @@ BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_V3D=y
 BR2_PACKAGE_MESA3D_VULKAN_DRIVER_BROADCOM=y
 BR2_PACKAGE_MESA3D_OSMESA_GALLIUM=y
 BR2_PACKAGE_MESA3D_OPENGL_ES=y
+BR2_PACKAGE_WESTON=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_CUSTOM_VERSION="d4a1760a76873c467e99a5a27f98815e65fb9a55"
 BR2_PACKAGE_RPI_FIRMWARE_VARIANT_PI4_X=y
@@ -61,7 +62,6 @@ BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_UNIXODBC=y
 BR2_PACKAGE_CAIRO_PDF=y
-BR2_PACKAGE_CAIRO_PNG=y
 BR2_PACKAGE_CAIROMM=y
 BR2_PACKAGE_DTC=y
 BR2_PACKAGE_LIBMNL=y
