--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -42,6 +42,8 @@ BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_F2FS_TOOLS=y
+BR2_PACKAGE_INCONSOLATA=y
+BR2_PACKAGE_LIBERATION=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_V3D=y
 BR2_PACKAGE_MESA3D_VULKAN_DRIVER_BROADCOM=y
@@ -63,6 +65,7 @@ BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_UNIXODBC=y
 BR2_PACKAGE_CAIRO_PDF=y
 BR2_PACKAGE_CAIROMM=y
+BR2_PACKAGE_WPEWEBKIT=y
 BR2_PACKAGE_DTC=y
 BR2_PACKAGE_LIBMNL=y
 BR2_PACKAGE_WIRELESS_REGDB=y
