--- a/fwup.conf
+++ b/fwup.conf
@@ -12,12 +12,12 @@ require-fwup-version="0.15.0"  # For the trim() call
 #  Use 'fw_printenv' to query values on the target.
 #
 # These are used by Nerves libraries to introspect.
-define(NERVES_FW_PRODUCT, "Nerves Firmware")
+define(NERVES_FW_PRODUCT, "Formrausch Nerves Firmware")
 define(NERVES_FW_DESCRIPTION, "")
 define(NERVES_FW_VERSION, "${NERVES_SDK_VERSION}")
 define(NERVES_FW_PLATFORM, "rpi4")
 define(NERVES_FW_ARCHITECTURE, "arm") # Not "aarch64" for historical reasons
-define(NERVES_FW_AUTHOR, "The Nerves Team")
+define(NERVES_FW_AUTHOR, "Formrausch")
 
 define(NERVES_FW_DEVPATH, "/dev/mmcblk0")
 define(NERVES_FW_APPLICATION_PART0_DEVPATH, "/dev/mmcblk0p3") # Linux part number is 1-based
@@ -68,10 +68,11 @@ define(BOOT_A_PART_COUNT, 38630)
 define-eval(BOOT_B_PART_OFFSET, "${BOOT_A_PART_OFFSET} + ${BOOT_A_PART_COUNT}")
 define(BOOT_B_PART_COUNT, ${BOOT_A_PART_COUNT})
 
-# Let the rootfs have room to grow up to 128 MiB and align it to the nearest 1
+# Let the rootfs have room to grow up to 256 MiB and align it to the nearest 1
 # MB boundary
 define(ROOTFS_A_PART_OFFSET, 77324)
-define(ROOTFS_A_PART_COUNT, 289044)
+#define(ROOTFS_A_PART_COUNT, 289044)
+define(ROOTFS_A_PART_COUNT, 6291456)
 define-eval(ROOTFS_B_PART_OFFSET, "${ROOTFS_A_PART_OFFSET} + ${ROOTFS_A_PART_COUNT}")
 define(ROOTFS_B_PART_COUNT, ${ROOTFS_A_PART_COUNT})
 
@@ -100,10 +101,10 @@ file-resource start4.elf {
     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/start4x.elf"
 }
 file-resource config.txt {
-    host-path = "${NERVES_SYSTEM}/images/config.txt"
+    host-path = "${NERVES_APP}/config/nerves/config.txt"
 }
 file-resource cmdline.txt {
-    host-path = "${NERVES_SYSTEM}/images/cmdline.txt"
+    host-path = "${NERVES_APP}/config/nerves/cmdline.txt"
 }
 file-resource kernel8.img {
     host-path = "${NERVES_SYSTEM}/images/Image"
@@ -175,6 +176,34 @@ file-resource rootfs.img {
     # Error out if the rootfs size exceeds the partition size
     assert-size-lte = ${ROOTFS_A_PART_COUNT}
 }
+
+# Additional files 
+ file-resource reTerminal-bridge-overlay.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/reTerminal-bridge-overlay.dtbo"
+ }
+ file-resource reTerminal-plus-overlay.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/reTerminal-plus-overlay.dtbo"
+ }
+ file-resource 2xMCP2517FD-overlay.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/2xMCP2517FD-overlay.dtbo"
+ }
+ file-resource 2xMCP2518FD-spi0-overlay.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/2xMCP2518FD-spi0-overlay.dtbo"
+ }
+ file-resource bma456-i2c1-overlay.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/bma456-i2c1-overlay.dtbo"
+ }
+ file-resource grove-led-overlay.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/grove-led-overlay.dtbo"
+ }
+ file-resource lis331dlh-overlay.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/lis331dlh-overlay.dtbo"
+ }
+ file-resource tpm-spi-slx9670-overlay.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/tpm-spi-slx9670-overlay.dtbo"
+ }
+
+ 
 
 mbr mbr-a {
     partition 0 {
@@ -289,6 +318,18 @@ task complete {
         raw_write(${ROOTFS_A_PART_OFFSET})
     }
 
+    # # Additional files
+     on-resource reTerminal-bridge-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-bridge-overlay.dtbo") }
+     on-resource reTerminal-plus-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-plus-overlay.dtbo") }
+
+     on-resource 2xMCP2517FD-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/2xMCP2517FD-overlay.dtbo") }
+     on-resource 2xMCP2518FD-spi0-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/2xMCP2518FD-spi0-overlay.dtbo") }
+     on-resource bma456-i2c1-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/bma456-i2c1-overlay.dtbo") }
+     on-resource grove-led-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/grove-led-overlay.dtbo") }
+     on-resource lis331dlh-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/lis331dlh-overlay.dtbo") }
+     on-resource tpm-spi-slx9670-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/tpm-spi-slx9670-overlay.dtbo") }
+
+
     on-finish {
         # Clear out any old data in the B partition that might be mistaken for
         # a file system. This is mostly to avoid confusion in humans when
@@ -366,6 +407,17 @@ task upgrade.a {
         delta-source-raw-count=${ROOTFS_B_PART_COUNT}
         raw_write(${ROOTFS_A_PART_OFFSET})
     }
+
+    # # Additional files
+     on-resource reTerminal-bridge-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-bridge-overlay.dtbo") }
+     on-resource reTerminal-plus-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-plus-overlay.dtbo") }
+
+     on-resource 2xMCP2517FD-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/2xMCP2517FD-overlay.dtbo") }
+     on-resource 2xMCP2518FD-spi0-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/2xMCP2518FD-spi0-overlay.dtbo") }
+     on-resource bma456-i2c1-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/bma456-i2c1-overlay.dtbo") }
+     on-resource grove-led-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/grove-led-overlay.dtbo") }
+     on-resource lis331dlh-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/lis331dlh-overlay.dtbo") }
+     on-resource tpm-spi-slx9670-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/tpm-spi-slx9670-overlay.dtbo") }
 
     on-finish {
         # Update firmware metadata
