--- a/fwup_include/provisioning.conf
+++ b/fwup_include/provisioning.conf
@@ -4,3 +4,5 @@
 # serial numbers are stored in the .fw file. If left blank, the device
 # will default to a built-in ID.
 uboot_setenv(uboot-env, "nerves_serial_number", "\${NERVES_SERIAL_NUMBER}")
+#uboot_setenv(uboot-env, "uboot_overlay_bridge", "/lib/firmware/reTerminal-bridge-overlay.dtbo")
+#uboot_setenv(uboot-env, "uboot_overlay_dm", "/lib/firmware/reTerminal-plus-overlay.dtbo")
