--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -36,14 +36,34 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2711-rpi-4-b broadcom/bcm2711-rpi-cm4 broadcom/bcm2711-rpi-400"
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="${NERVES_DEFCONFIG_DIR}/ramoops.dts"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
-BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busybox.config"
+BR2_PACKAGE_LINUX_TOOLS_GPIO=y
+BR2_PACKAGE_LINUX_TOOLS_IIO=y
+BR2_PACKAGE_BUSYBOX_CONFIG="${NERVES_DEFCONFIG_DIR}/busybox_defconfig"
 BR2_PACKAGE_ALSA_UTILS=y
 # BR2_PACKAGE_ALSA_UTILS_ALSAMIXER is not set
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_GSTREAMER1=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_APP=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VIDEORATE=y
+BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUDIOFX=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_MATROSKA=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_RTSP=y
+BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_VPX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_DEBUGUTILS=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_MPEGTSDEMUX=y
+BR2_PACKAGE_GST1_PLUGINS_BAD_PLUGIN_SUBENC=y
+BR2_PACKAGE_GST1_LIBAV=y
 BR2_PACKAGE_F2FS_TOOLS=y
 BR2_PACKAGE_INCONSOLATA=y
 BR2_PACKAGE_LIBERATION=y
+BR2_PACKAGE_COG=y
+BR2_PACKAGE_COG_PROGRAMS_HOME_URI="http://localhost:4000/"
+BR2_PACKAGE_FSWEBCAM=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_V3D=y
 BR2_PACKAGE_MESA3D_VULKAN_DRIVER_BROADCOM=y
@@ -57,17 +77,35 @@ BR2_PACKAGE_PIGPIO=y
 # BR2_PACKAGE_RNG_TOOLS_JITTERENTROPY_LIBRARY is not set
 # BR2_PACKAGE_ALSA_LIB_RAWMIDI is not set
 # BR2_PACKAGE_ALSA_LIB_HWDEP is not set
-# BR2_PACKAGE_ALSA_LIB_SEQ is not set
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 # BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS is not set
 BR2_PACKAGE_CA_CERTIFICATES=y
+BR2_PACKAGE_GNUTLS_OPENSSL=y
+BR2_PACKAGE_GNUTLS_TOOLS=y
+BR2_PACKAGE_GNUTLS_ENABLE_SSL2=y
+BR2_PACKAGE_GNUTLS_ENABLE_GOST=y
 BR2_PACKAGE_LIBP11=y
+BR2_PACKAGE_PKCS11_HELPER=y
+BR2_PACKAGE_TPM2_PKCS11=y
 BR2_PACKAGE_UNIXODBC=y
 BR2_PACKAGE_CAIRO_PDF=y
 BR2_PACKAGE_CAIROMM=y
+BR2_PACKAGE_LIBVIPS=y
+BR2_PACKAGE_OPENCV4=y
+BR2_PACKAGE_OPENCV4_CONTRIB=y
 BR2_PACKAGE_WPEWEBKIT=y
 BR2_PACKAGE_DTC=y
+BR2_PACKAGE_LIBDISPLAY_INFO=y
+BR2_PACKAGE_LIBGPIOD=y
+BR2_PACKAGE_LIBGPIOD_TOOLS=y
+BR2_PACKAGE_LIBIIO=y
+BR2_PACKAGE_LIBNFC=y
+BR2_PACKAGE_LIBNFC_ACR122_PCSC=y
+BR2_PACKAGE_LIBNFC_ACR122_USB=y
 BR2_PACKAGE_LIBMNL=y
+BR2_PACKAGE_LIBSOUP3_SSL=y
+BR2_PACKAGE_LIBSECCOMP=y
+BR2_PACKAGE_MOSQUITTO=y
 BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_WIRED=y
@@ -79,7 +117,10 @@ BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPA3=y
 BR2_PACKAGE_WPA_SUPPLICANT_CTRL_IFACE=y
+BR2_PACKAGE_BUBBLEWRAP=y
+BR2_PACKAGE_XDG_DBUS_PROXY=y
 # BR2_TARGET_ROOTFS_TAR is not set
+BR2_PACKAGE_HOST_PYTHON_PYYAML=y
 BR2_NERVES_SYSTEM_NAME="nerves_system_rpi4"
 BR2_NERVES_ADDITIONAL_IMAGE_FILES="${NERVES_DEFCONFIG_DIR}/fwup.conf ${NERVES_DEFCONFIG_DIR}/cmdline.txt ${NERVES_DEFCONFIG_DIR}/config.txt"
 BR2_PACKAGE_NBTTY=y
@@ -87,3 +128,8 @@ BR2_PACKAGE_NERVES_CONFIG=y
 BR2_PACKAGE_RPICAM_APPS=y
 BR2_PACKAGE_RPI_DISTRO_FIRMWARE_NONFREE=y
 BR2_PACKAGE_RPI_LIBCAMERA_V4L2=y
+BR2_PACKAGE_ILI9881D=y
+BR2_PACKAGE_RETERMINAL_DM=y
+BR2_PACKAGE_CH34X=y
+BR2_PACKAGE_LTR30X=y
+BR2_PACKAGE_RTC_PCF8563W=y
