--- a/fwup-ops.conf
+++ b/fwup-ops.conf
@@ -78,10 +78,11 @@ define(BOOT_A_PART_COUNT, 38630)
 define-eval(BOOT_B_PART_OFFSET, "${BOOT_A_PART_OFFSET} + ${BOOT_A_PART_COUNT}")
 define(BOOT_B_PART_COUNT, ${BOOT_A_PART_COUNT})
 
-# Let the rootfs have room to grow up to 128 MiB and align it to the nearest 1
+# Let the rootfs have room to grow up to 256 MiB and align it to the nearest 1
 # MB boundary
+# 24 * 262144 * 512 / 1024 / 1024 => 3000MB
 define(ROOTFS_A_PART_OFFSET, 77324)
-define(ROOTFS_A_PART_COUNT, 289044)
+define(ROOTFS_A_PART_COUNT, 6291456)
 define-eval(ROOTFS_B_PART_OFFSET, "${ROOTFS_A_PART_OFFSET} + ${ROOTFS_A_PART_COUNT}")
 define(ROOTFS_B_PART_COUNT, ${ROOTFS_A_PART_COUNT})
 
