Add more debug options (lspci, lsusb)

--- a/busybox_defconfig
+++ b/busybox_defconfig
@@ -643,8 +643,8 @@ CONFIG_FEATURE_DMESG_PRETTY=y
 # CONFIG_LAST is not set
 # CONFIG_FEATURE_LAST_FANCY is not set
 # CONFIG_LOSETUP is not set
-# CONFIG_LSPCI is not set
-# CONFIG_LSUSB is not set
+CONFIG_LSPCI=y
+CONFIG_LSUSB=y
 # CONFIG_MDEV is not set
 # CONFIG_FEATURE_MDEV_CONF is not set
 # CONFIG_FEATURE_MDEV_RENAME is not set
