Backport all changes into the firmware base image

--- a/fwup.conf
+++ b/fwup.conf
@@ -12,7 +12,7 @@ require-fwup-version="0.15.0"  # For the trim() call
 #  Use 'fw_printenv' to query values on the target.
 #
 # These are used by Nerves libraries to introspect.
-define(NERVES_FW_PRODUCT, "Formrausch Nerves Firmware")
+define(NERVES_FW_PRODUCT, "Formrausch reTerminal DM Firmware")
 define(NERVES_FW_DESCRIPTION, "")
 define(NERVES_FW_VERSION, "${NERVES_SDK_VERSION}")
 define(NERVES_FW_PLATFORM, "rpi4")
@@ -101,10 +101,12 @@ file-resource start4.elf {
     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/start4x.elf"
 }
 file-resource config.txt {
-    host-path = "${NERVES_APP}/config/nerves/config.txt"
+    host-path = "${NERVES_SYSTEM}/images/config.txt"
+    # host-path = "${NERVES_APP}/config/nerves/config.txt"
 }
 file-resource cmdline.txt {
-    host-path = "${NERVES_APP}/config/nerves/cmdline.txt"
+    host-path = "${NERVES_SYSTEM}/images/cmdline.txt"
+    # host-path = "${NERVES_APP}/config/nerves/cmdline.txt"
 }
 file-resource kernel8.img {
     host-path = "${NERVES_SYSTEM}/images/Image"
@@ -178,30 +180,30 @@ file-resource rootfs.img {
 }
 
 # Additional files 
- file-resource reTerminal-bridge-overlay.dtbo {
-     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/reTerminal-bridge-overlay.dtbo"
+ # file-resource reTerminal-bridge.dtbo {
+ #     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/reTerminal-bridge.dtbo"
+ # }
+ file-resource reTerminal-plus.dtbo {
+     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/reTerminal-plus.dtbo"
  }
- file-resource reTerminal-plus-overlay.dtbo {
-     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/reTerminal-plus-overlay.dtbo"
- }
- file-resource 2xMCP2517FD-overlay.dtbo {
-     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/2xMCP2517FD-overlay.dtbo"
- }
- file-resource 2xMCP2518FD-spi0-overlay.dtbo {
-     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/2xMCP2518FD-spi0-overlay.dtbo"
- }
- file-resource bma456-i2c1-overlay.dtbo {
-     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/bma456-i2c1-overlay.dtbo"
- }
- file-resource grove-led-overlay.dtbo {
-     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/grove-led-overlay.dtbo"
- }
- file-resource lis331dlh-overlay.dtbo {
-     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/lis331dlh-overlay.dtbo"
- }
- file-resource tpm-spi-slx9670-overlay.dtbo {
-     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/tpm-spi-slx9670-overlay.dtbo"
- }
+ # file-resource 2xMCP2517FD.dtbo {
+ #     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/2xMCP2517FD.dtbo"
+ # }
+ # file-resource 2xMCP2518FD-spi0.dtbo {
+ #     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/2xMCP2518FD-spi0.dtbo"
+ # }
+ # file-resource bma456-i2c1.dtbo {
+ #     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/bma456-i2c1.dtbo"
+ # }
+ # file-resource grove-led.dtbo {
+ #     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/grove-led.dtbo"
+ # }
+ # file-resource lis331dlh.dtbo {
+ #     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/lis331dlh.dtbo"
+ # }
+ # file-resource tpm-spi-slx9670.dtbo {
+ #     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/tpm-spi-slx9670.dtbo"
+ # }
 
  
 
@@ -318,17 +320,8 @@ task complete {
         raw_write(${ROOTFS_A_PART_OFFSET})
     }
 
-    # # Additional files
-     on-resource reTerminal-bridge-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-bridge-overlay.dtbo") }
-     on-resource reTerminal-plus-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-plus-overlay.dtbo") }
-
-     on-resource 2xMCP2517FD-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/2xMCP2517FD-overlay.dtbo") }
-     on-resource 2xMCP2518FD-spi0-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/2xMCP2518FD-spi0-overlay.dtbo") }
-     on-resource bma456-i2c1-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/bma456-i2c1-overlay.dtbo") }
-     on-resource grove-led-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/grove-led-overlay.dtbo") }
-     on-resource lis331dlh-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/lis331dlh-overlay.dtbo") }
-     on-resource tpm-spi-slx9670-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/tpm-spi-slx9670-overlay.dtbo") }
-
+    #  Additional files
+    on-resource reTerminal-plus.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-plus.dtbo") }
 
     on-finish {
         # Clear out any old data in the B partition that might be mistaken for
@@ -408,16 +401,8 @@ task upgrade.a {
         raw_write(${ROOTFS_A_PART_OFFSET})
     }
 
-    # # Additional files
-     on-resource reTerminal-bridge-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-bridge-overlay.dtbo") }
-     on-resource reTerminal-plus-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-plus-overlay.dtbo") }
-
-     on-resource 2xMCP2517FD-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/2xMCP2517FD-overlay.dtbo") }
-     on-resource 2xMCP2518FD-spi0-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/2xMCP2518FD-spi0-overlay.dtbo") }
-     on-resource bma456-i2c1-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/bma456-i2c1-overlay.dtbo") }
-     on-resource grove-led-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/grove-led-overlay.dtbo") }
-     on-resource lis331dlh-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/lis331dlh-overlay.dtbo") }
-     on-resource tpm-spi-slx9670-overlay.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/tpm-spi-slx9670-overlay.dtbo") }
+    # Additional files
+    on-resource reTerminal-plus.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/reTerminal-plus.dtbo") }
 
     on-finish {
         # Update firmware metadata
@@ -503,6 +488,9 @@ task upgrade.b {
         delta-source-raw-count=${ROOTFS_A_PART_COUNT}
         raw_write(${ROOTFS_B_PART_OFFSET})
     }
+
+    # Additional files
+    on-resource reTerminal-plus.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/reTerminal-plus.dtbo") }
 
     on-finish {
         # Update firmware metadata
